fix local instructions

--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
   "engines": {
     "node": "8.x"
   },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
   "license": "MIT",
   "keywords": [
-    "node",
-    "glitch",
-    "express"
+    "magenta",
+    "groovae",
+    "glitch"
   ]
 }
